--- a/MavenProject_OrangeHRM/.project
+++ b/MavenProject_OrangeHRM/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MavenProject_OrangeHRM</name>
+	<name>MavenProject_OrangeHRM2</name>
 	<comment></comment>
 	<projects>
 	</projects>
